--- a/Hxu-folder/Sport project.ipynb
+++ b/Hxu-folder/Sport project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "f722cf3f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "02222411",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "99909ba8",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "4                            NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
+   "id": "4b458dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23921"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_game = fifa_df.groupby(['home_team']).size()\n",
+    "total_fifa_game = total_game.sum()\n",
+    "total_fifa_game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "837e736d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23921"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "755b9295",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "home_team\n",
+       "Mexico    316\n",
+       "USA       314\n",
+       "Japan     280\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Count each team's total home game\n",
+    "home_team = fifa_df.groupby(['home_team']).size().nlargest(3)\n",
+    "home_team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2c9c030f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "away_team\n",
+       "Zambia        243\n",
+       "Costa Rica    217\n",
+       "Paraguay      216\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Count each team's total away game\n",
+    "away_team = fifa_df.groupby(['away_team']).size().nlargest(3)\n",
+    "away_team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "8f6dac3d",
    "metadata": {},
    "outputs": [
@@ -341,7 +437,7 @@
        "Name: home_team, Length: 211, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,12 +447,12 @@
     "win_home_team = fifa_df.loc[fifa_df['home_team_result'] == 'Win']\n",
     "most_win_home_team = win_home_team['home_team'].value_counts()\n",
     "most_win_home_team.sort_values(ascending=False)\n",
-    "most_win_home_team"
+    "most_win_home_team\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "dd019bc1",
    "metadata": {},
    "outputs": [
@@ -377,7 +473,7 @@
        "Name: away_team, Length: 209, dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,6 +484,50 @@
     "most_win_away_team = win_away_team['away_team'].value_counts()\n",
     "most_win_away_team.sort_values(ascending=False)\n",
     "most_win_away_team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0805197b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11761"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_win_home = most_win_home_team.sum()\n",
+    "total_win_home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a34065f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6771"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_win_away = most_win_away_team.sum()\n",
+    "total_win_away"
    ]
   },
   {
