home game advantage answered

--- a/Hxu-folder/Sport project.ipynb
+++ b/Hxu-folder/Sport project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f722cf3f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "02222411",
    "metadata": {},
    "outputs": [],
@@ -336,6 +336,7 @@
     }
    ],
    "source": [
+    "#Total home team games\n",
     "total_game = fifa_df.groupby(['home_team']).size()\n",
     "total_fifa_game = total_game.sum()\n",
     "total_fifa_game"
@@ -504,6 +505,7 @@
     }
    ],
    "source": [
+    "#Total wins of home game\n",
     "total_win_home = most_win_home_team.sum()\n",
     "total_win_home"
    ]
@@ -526,6 +528,7 @@
     }
    ],
    "source": [
+    "#Totaal wins of away game\n",
     "total_win_away = most_win_away_team.sum()\n",
     "total_win_away"
    ]
@@ -554,6 +557,7 @@
     }
    ],
    "source": [
+    "#Count total win home game by continent\n",
     "win_home_team_con = fifa_df.loc[fifa_df['home_team_result'] == 'Win']\n",
     "most_win_home_team_con = win_home_team_con['home_team_continent'].value_counts()\n",
     "most_win_home_team_con.sort_values(ascending=False)\n",
@@ -584,6 +588,7 @@
     }
    ],
    "source": [
+    "#Count total win away games by continent\n",
     "win_away_team_con = fifa_df.loc[fifa_df['home_team_result'] == 'Lose']\n",
     "most_win_away_team_con = win_away_team_con['away_team_continent'].value_counts()\n",
     "most_win_away_team_con.sort_values(ascending=False)\n",
@@ -705,6 +710,7 @@
     }
    ],
    "source": [
+    "#Count total games by city\n",
     "tournament = fifa_df['city'].value_counts().reset_index(name='counts')\n",
     "\n",
     "tournament\n"
@@ -712,11 +718,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3006a10b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "away_team\n",
+       "Brazil    200\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Brazil total away games\n",
+    "BR = fifa_df.loc[fifa_df['away_team'] == 'Brazil']\n",
+    "BR_away_game = BR.groupby(['away_team']).size()\n",
+    "BR_away_game"
+   ]
   },
   {
    "cell_type": "code",
