--- a/Hxu-folder/Home-team advantage.ipynb
+++ b/Hxu-folder/Home-team advantage.ipynb
@@ -328,6 +328,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f24b184",
+   "metadata": {},
+   "source": [
+    "### First, I would like to look at the home teams win rates\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "id": "81678b0f",
@@ -344,12 +352,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Total home team games\n",
-    "total_game = fifa_df.groupby(['home_team']).size()\n",
-    "total_game = total_game.sum()\n",
-    "total_game"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -828,6 +831,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc21c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total home team games\n",
+    "total_game = fifa_df.groupby(['home_team']).size()\n",
+    "total_game = total_game.sum()\n",
+    "total_game"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "id": "0805197b",
    "metadata": {},
@@ -1242,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9ce080ac",
+   "id": "33dfdff3",
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "85de16e1",
+   "id": "918ff634",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "b35df814",
+   "id": "c53bb2e6",
    "metadata": {},
    "outputs": [
     {
