--- a/Hxu-folder/Home-team advantage.ipynb
+++ b/Hxu-folder/Home-team advantage.ipynb
@@ -332,35 +332,8 @@
    "id": "4f24b184",
    "metadata": {},
    "source": [
-    "### First, I would like to look at the home teams win rates\n"
+    "### First, I would like to compare the home and away game winrate of different teams\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "81678b0f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23921"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "837e736d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -392,7 +365,7 @@
     }
    ],
    "source": [
-    "#Count each team's total home game\n",
+    "#Count each home team's total home game\n",
     "home_team = fifa_df.groupby(['home_team']).size()\n",
     "home_team"
    ]
@@ -427,7 +400,7 @@
     }
    ],
    "source": [
-    "#Count each team's total away game\n",
+    "#Count each away team's total away game\n",
     "away_team = fifa_df.groupby(['away_team']).size()\n",
     "away_team"
    ]
@@ -461,7 +434,7 @@
     }
    ],
    "source": [
-    "#Count the win home team\n",
+    "#Count the win home team result\n",
     "win_home_team = fifa_df.loc[fifa_df['home_team_result'] == 'Win']\n",
     "most_win_home_team = win_home_team['home_team'].value_counts()\n",
     "most_win_home_team.sort_values(ascending=False)\n",
@@ -497,7 +470,7 @@
     }
    ],
    "source": [
-    "#Count home_team_result = Lose means away team won the game\n",
+    "#Count away_team_result\n",
     "win_away_team = fifa_df.loc[fifa_df['home_team_result'] == 'Lose']\n",
     "most_win_away_team = win_away_team['away_team'].value_counts()\n",
     "most_win_away_team.sort_values(ascending=False)\n",
@@ -610,7 +583,7 @@
     }
    ],
    "source": [
-    "#each top 10 home_team's winrate\n",
+    "#top 10 home_team's winrate\n",
     "home_winrate = (most_win_home_team/home_team)*100\n",
     "home_winrate = home_winrate.sort_values(ascending=False).head(10)\n",
     "home_winrate_df = pd.DataFrame(home_winrate)\n",
@@ -727,6 +700,7 @@
     }
    ],
    "source": [
+    "#Top 10 away team winrate\n",
     "away_winrate = (most_win_away_team/away_team)*100\n",
     "away_winrate = away_winrate.sort_values(ascending=False).head(10)\n",
     "away_winrate_df = pd.DataFrame(away_winrate)\n",
@@ -736,36 +710,6 @@
     "away_winrate_df = away_winrate_df.head(10)\n",
     "away_winrate_df\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7384195e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Brazil                   120\n",
-       "Spain                    101\n",
-       "Germany                  101\n",
-       "Zambia                    88\n",
-       "Argentina                 86\n",
-       "                        ... \n",
-       "Timor-Leste                1\n",
-       "Anguilla                   1\n",
-       "American Samoa             1\n",
-       "São Tomé and Príncipe      1\n",
-       "Andorra                    1\n",
-       "Name: away_team, Length: 209, dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -789,7 +733,7 @@
     }
    ],
    "source": [
-    "#Top 10 home-team win rates\n",
+    "#Top 10 home-team win rates viz\n",
     "fig, ax = plt.subplots(figsize=(14,5))\n",
     "g=plt.barh(home_winrate_df['home_team'],home_winrate_df['winrate'])\n",
     "plt.ylabel('Home_team',fontsize=12)\n",
@@ -818,7 +762,7 @@
     }
    ],
    "source": [
-    "#top 10 away team win raate\n",
+    "#top 10 away team win rate viz\n",
     "fig, ax = plt.subplots(figsize=(13,5))\n",
     "g=plt.barh(away_winrate_df['away_team'],away_winrate_df['winrate'])\n",
     "plt.ylabel('Away_team',fontsize=12)\n",
@@ -830,13 +774,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7439f73",
+   "metadata": {},
+   "source": [
+    "### Next, we compare the total winrate of both side."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2dc21c4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Total home team games\n",
+    "# Total games\n",
     "total_game = fifa_df.groupby(['home_team']).size()\n",
     "total_game = total_game.sum()\n",
     "total_game"
@@ -986,7 +938,7 @@
     }
    ],
    "source": [
-    "#put both win rate together\n",
+    "\n",
     "winrate = {'home_team':total_home_winrate,'away_team':total_away_winrate}\n",
     "winrate_df = pd.DataFrame(data=winrate,index = [0])\n",
     "winrate_df"
@@ -1012,7 +964,7 @@
     }
    ],
    "source": [
-    "#Bar chart for both side's total win rate\n",
+    "#Bar chart for both side's total win rate \n",
     "p1=winrate_df.plot(kind='bar')\n",
     "\n",
     "plt.title(\"FIFA winrate\")\n",
@@ -1023,186 +975,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "76335d17",
+   "cell_type": "markdown",
+   "id": "81618c1b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Europe           3517\n",
-       "Africa           2942\n",
-       "Asia             2585\n",
-       "North America    1369\n",
-       "South America    1062\n",
-       "Oceania           286\n",
-       "Name: home_team_continent, dtype: int64"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#Count total win home game by continent\n",
-    "win_home_team_con = fifa_df.loc[fifa_df['home_team_result'] == 'Win']\n",
-    "most_win_home_team_con = win_home_team_con['home_team_continent'].value_counts()\n",
-    "most_win_home_team_con.sort_values(ascending=False)\n",
-    "most_win_home_team_con"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "a41ab3df",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Europe           2435\n",
-       "Africa           1513\n",
-       "Asia             1286\n",
-       "North America     700\n",
-       "South America     657\n",
-       "Oceania           180\n",
-       "Name: away_team_continent, dtype: int64"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Count total win away games by continent\n",
-    "win_away_team_con = fifa_df.loc[fifa_df['home_team_result'] == 'Lose']\n",
-    "most_win_away_team_con = win_away_team_con['away_team_continent'].value_counts()\n",
-    "most_win_away_team_con.sort_values(ascending=False)\n",
-    "most_win_away_team_con"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "35732fe3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Doha</td>\n",
-       "      <td>397</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bangkok</td>\n",
-       "      <td>215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Muscat</td>\n",
-       "      <td>212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Kuwait City</td>\n",
-       "      <td>202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Abu Dhabi</td>\n",
-       "      <td>191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1571</th>\n",
-       "      <td>Dunedin</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1572</th>\n",
-       "      <td>Manisa</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1573</th>\n",
-       "      <td>Mondercange</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1574</th>\n",
-       "      <td>Veracruz</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1575</th>\n",
-       "      <td>Vitsebsk</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1576 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            index  counts\n",
-       "0            Doha     397\n",
-       "1         Bangkok     215\n",
-       "2          Muscat     212\n",
-       "3     Kuwait City     202\n",
-       "4       Abu Dhabi     191\n",
-       "...           ...     ...\n",
-       "1571      Dunedin       1\n",
-       "1572       Manisa       1\n",
-       "1573  Mondercange       1\n",
-       "1574     Veracruz       1\n",
-       "1575     Vitsebsk       1\n",
-       "\n",
-       "[1576 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Count total games by city\n",
-    "tournament = fifa_df['city'].value_counts().reset_index(name='counts')\n",
-    "\n",
-    "tournament\n"
+    "### Compare the highest winrate home teamwith its away game result.\n"
    ]
   },
   {
@@ -1230,6 +1007,14 @@
     "BR_away_game = BR.groupby(['away_team']).size()\n",
     "BR_away_game"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ce96bde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
