--- a/Hxu-folder/Home-team advantage.ipynb
+++ b/Hxu-folder/Home-team advantage.ipynb
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7439f73",
+   "id": "adca2f19",
    "metadata": {},
    "source": [
     "### Next, we compare the total winrate of both side."
@@ -976,45 +976,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81618c1b",
+   "id": "3363c5eb",
    "metadata": {},
    "source": [
-    "### Compare the highest winrate home teamwith its away game result.\n"
+    "### Compare home team and away team total score and still, home team has better result.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3006a10b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "away_team\n",
-       "Brazil    200\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Brazil total away games\n",
-    "BR = fifa_df.loc[fifa_df['away_team'] == 'Brazil']\n",
-    "BR_away_game = BR.groupby(['away_team']).size()\n",
-    "BR_away_game"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ce96bde",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
